--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "rxjs": "6.6.7",
+    "rxjs-hooks": "^0.7.0",
     "waait": "^1.0.5",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.6"
