--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "react-intl": "^5.17.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "rxjs": "6.6.7",
-    "rxjs-hooks": "^0.7.0",
+    "redux-observable": "^1.2.0",
+    "rxjs": "^7.1.0",
     "waait": "^1.0.5",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.6"
