--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.3",
     "redux-observable": "^1.2.0",
     "rxjs": "6.6.7",
+    "typesafe-actions": "^5.1.0",
     "waait": "^1.0.5",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.6"
