--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@0x/contract-addresses": "^6.3.0",
     "@craco/craco": "^6.1.2",
+    "@ethersproject/providers": "^5.3.1",
     "@headlessui/react": "^1.2.0",
     "@types/lodash": "^4.14.170",
+    "@web3-react/abstract-connector": "^6.0.7",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
     "eth-multicall": "^1.3.13",
@@ -20,46 +22,6 @@
     "redux-observable": "^1.2.0",
     "rxjs": "6.6.7",
     "typesafe-actions": "^5.1.0",
-    "waait": "^1.0.5",
-    "web-vitals": "^1.0.1",
-    "web3": "^1.3.6"
-  },
-  "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@reduxjs/toolkit": "^1.5.1",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-router-dom": "^5.1.7",
-    "@web3-react/authereum-connector": "^6.2.0",
-    "@web3-react/core": "^6.1.9",
-    "@web3-react/fortmatic-connector": "^6.1.6",
-    "@web3-react/frame-connector": "^6.0.9",
-    "@web3-react/injected-connector": "^6.0.7",
-    "@web3-react/lattice-connector": "^6.1.9",
-    "@web3-react/ledger-connector": "^6.1.9",
-    "@web3-react/network-connector": "^6.1.9",
-    "@web3-react/portis-connector": "^6.1.9",
-    "@web3-react/torus-connector": "^6.1.9",
-    "@web3-react/trezor-connector": "^6.1.9",
-    "@web3-react/walletconnect-connector": "^6.2.0",
-    "@web3-react/walletlink-connector": "^6.2.0",
-    "axios": "^0.21.1",
-    "bignumber.js": "^9.0.1",
-    "eth-multicall": "^1.3.13",
-    "json-bigint": "^1.0.0",
-    "lodash": "^4.17.21",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-intl": "^5.17.6",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "rxjs": "6.6.7",
     "waait": "^1.0.5",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.6"
