--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@0x/contract-addresses": "^6.3.0",
     "@0x/utils": "^6.4.4",
     "@craco/craco": "^6.1.2",
+    "@ensdomains/ensjs": "^2.0.1",
     "@gnosis.pm/safe-apps-web3-react": "^0.6.5",
     "@headlessui/react": "^1.3.0",
     "@popperjs/core": "^2.9.3",
